--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
      <h1>My Portfolio</h1>
     <h2>I'm a Web Developer and Graphic Designer</h2>
     <hr>
-    <h2><a href="./public/movie.html">About Me</a>
+    <h2><a href="./public/movie.html">Movie Ranking Project</a>
         <h2>The Best Movies According to Angela</h2>
         <h3>My top 3 movies of all-time.</h3>
         <hr>
@@ -34,7 +34,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <p>Really cool sci-fi movie</p>
         <h4>Drive</h4>
         <p>Super beautiful film. Really artistic</p>
-    <h2><a href="./public/birthday.html">About Me</a>></h2>
+    <h2><a href="./public/birthday.html">Birthday Invite Project</a>></h2>
     <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
     <h2><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a></h2>
 
